--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,12 @@ pycodestyle==2.11.1
 pycparser==2.21
 pyflakes==3.1.0
 PyJWT==2.8.0
+python-social-auth==0.3.6
 python3-openid==3.2.0
 pytz==2023.3.post1
 redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 social-auth-app-django==5.4.0
-social-auth-core==4.5.1
 sqlparse==0.4.4
 urllib3==2.1.0
