--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,11 @@ defusedxml==0.7.1
 Django==4.2.7
 django-allauth==0.58.2
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
 flake8==6.1.0
 idna==3.4
+inflection==0.5.1
 mccabe==0.7.0
 msgpack==1.0.7
 mypy-extensions==1.0.0
@@ -28,9 +31,12 @@ PyJWT==2.8.0
 python-social-auth==0.3.6
 python3-openid==3.2.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 social-auth-app-django==5.4.0
+social-auth-core==4.5.1
 sqlparse==0.4.4
+uritemplate==4.1.1
 urllib3==2.1.0
